# pyfastlz-infernitydev

./: .gitignore  .gitmodules  README.md  fastlz.c  pyproject.toml  setup.cfg  setup.py  test_fastlz.py
.github/workflows/: python-package.yml  python-publish.yml
