[metadata]
name = pyfastlz
author = 'Jared Suttles, Paul Chan'
license = BSD License
description = Python wrapper for FastLZ, a lightning-fast lossless compression library.
url = https://github.com/PaulChanHK/python-fastlz
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: POSIX
    Programming Language :: C
    Programming Language :: Python
    Topic :: Software Development :: Libraries
    Topic :: System :: Archiving :: Compression
    Topic :: Utilities

[options]
setup_requires = wheel
python_requires = >=3.9

[options.extras_require]
dev = pytest

[flake8]
per-file-ignores = setup.py:F401
