[metadata]
name = pyfastlz-infernitydev
author = 'Jared Suttles, Paul Chan, whirlingstars'
license = BSD License
description = An extended wrapper for FastLZ which takes in and returns the length seperately, instead of in the bytes field 
url = https://github.com/infernitydev/pyfastlz-infernitydev
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    Operating System :: POSIX
    Programming Language :: C
    Programming Language :: Python
    Topic :: Software Development :: Libraries
    Topic :: System :: Archiving :: Compression
    Topic :: Utilities

[options]
setup_requires = wheel
python_requires = >=3.9

[options.extras_require]
dev = pytest

[flake8]
per-file-ignores = setup.py:F401
